EFSDEV-436: added generate-url.
